Fixed: wflow-core - DX X-Admin Theme - When datalist set to non responsive, it can't scroll to view overflow columns in mobile. @7.0-SNAPSHOT

--- a/wflow-consoleweb/src/main/webapp/xadmin/css/list.css
+++ b/wflow-consoleweb/src/main/webapp/xadmin/css/list.css
@@ -1,3 +1,6 @@
+body .dataList {
+    overflow-x: scroll;
+}
 body .dataList .filters {
     text-align: left;
 }
